2004-10-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/DescendReport.py: fix get_valid_year

2004-10-25  Don Allingham  <dallingham@users.sourceforge.net>
        * src/StartupDialog.py: handle delete event
	* src/docgen/HtmlDoc.py: fix typo
	* src/docgen/OpenOfficeDoc.py: don't use temporary files
	* src/plugins/PatchNames.py: pychecker fixes
	* src/plugins/RelCalc.py: pychecker fixes
	* src/plugins/ReorderIds.py: pychecker fixes
	* src/plugins/Verify.py: pychecker fixes
	* src/plugins/WebPage.py: pychecker fixes
	* src/plugins/WriteFtree.py: pychecker fixes
	* src/plugins/WriteGeneWeb.py: pychecker fixes

2004-10-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: change "Edit..." buttons to an image
	* src/plugins/CountAncestors.py: handle duplicates across
	generations

2004-10-24 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/MediaView.py: Typo.

2004-10-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleModel.py: disable bold due to gtk tree bug
	* src/PeopleView.py: disable bold due to gtk tree bug
	* src/plugins/CountAncestors.py: Handle duplicates properly

2004-10-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: thumbnail handing in the database 
	* src/GrampsDbBase.py: add set_thumbnail_image and 
	get_thumbnail_image in base class
	* src/GrampsInMemDB.py: saving thumbnail image
	* src/GrampsCfg.py: create thumbnail image directory
	* src/ImageSelect.py: use new thumbnail scheme
	* src/MediaView.py: use new thumbnail scheme
	* src/ReadGedcom.py: use new thumbnail scheme
	* src/ReadXML.py: use new thumbnail scheme
	* src/SelectObject.py: use new thumbnail scheme
	* src/gramps_main.py: use new thumbnail scheme
	* src/Utils.py: remove unused tasks
	* src/RelImage.py: remove unused tasks
	
2004-10-22 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/TimeLine.py: Remove old Date.UNDEF usage.

2004-10-21  Don Allingham  <dallingham@users.sourceforge.net>