@@ -1,4 +1,5 @@
 2004-10-26  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/docgen/OpenOfficeDoc.py: fix asian font, file extension
 	* src/plugins/DescendReport.py: fix get_valid_year
 
 2004-10-25  Don Allingham  <dallingham@users.sourceforge.net>
